syntax = "proto3";

package user;

message User {
  string id = 1;
  string userName = 2;
  string userPassword = 3;
  string personId = 4;
}

// *********** DTO ***********
message Create {
  string userName = 1;
  string userPassword = 2;
  string personId = 3;
}

message Update {
  string id = 1;
  string userName = 2;
  string userPassword = 3;
  string personId = 4;
}

message Delete {
  string id = 1;
}

message Search {
  string id = 1;
  string userName = 2;
  string userPassword = 3;
  string personId = 4;
}

// *********** One ***********
message One {
  User data = 1;
}

// *********** Many ***********
message Many {
  repeated User data = 1;
}

service UserService {
  rpc CreateOne (Create) returns (One) {}
  rpc UpdateOne (Update) returns (One) {}
  rpc DeleteOne (Delete) returns (One) {}
  rpc SearchOne (Search) returns (One) {}
  rpc SearchMany (Many) returns (Many) {}
}