syntax = "proto3";

package auth;

message SingInRequest {
  string userName = 1;
  string userPassword = 2;
}

message SingInResponse{
  string id = 1;
  string userName = 2;
  string personId = 3;
  string jwt = 4;
}

service AuthService {
  rpc Signin (SingInRequest) returns (SingInResponse) {}
}